src/objects/Master_Service_Agreement__c.object
<CustomObject>
    <description>Master Service Agreements with mostly industrial clients</description>
    <fields>
        <fullName>AECOM_Contract_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select AECOM employee responsible for this agreement</inlineHelpText>
        <label>AECOM Contract Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Master_Service_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the related account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Service Agreements</relationshipLabel>
        <relationshipName>Master_Service_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select BL for this forecast amount</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>Business_Line__c</referenceTo>
        <relationshipLabel>Master Service Agreements</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Contract_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person at client organization who is responsible for this contract</inlineHelpText>
        <label>Client Contract Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master Service Agreements</relationshipLabel>
        <relationshipName>Master_Service_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <inlineHelpText>Enter District Name</inlineHelpText>
        <label>District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date contract begins</description>
        <inlineHelpText>Date contract began</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_ID__c</fullName>
        <displayFormat>MSA-{000000}</displayFormat>
        <inlineHelpText>Auto-generated identifier</inlineHelpText>
        <label>MSA ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Maximum_Contract_Limit__c</fullName>
        <inlineHelpText>Enter ceiling if applicable</inlineHelpText>
        <label>Maximum Contract Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Coverage__c</fullName>
        <inlineHelpText>Select the primary area of work to be provided under this MSA.</inlineHelpText>
        <label>Service Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Design/Build/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering/Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Master Service Agreements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MSA Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Service Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>